Добавить авторизацию и регистрацию
