# src/api/models/SpecBox/WebApi/Model/Auth/access-token-model.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AccessTokenModel {
+  accessToken: string;
+  refreshToken: string;
+}
