# src/app/auth/model/user-register.model.ts
@@ -1,0 +1,6 @@
+export interface UserRegisterModel {
+  login: string;
+  email: string;
+  name: string;
+  password: string;
+}
